Peace (Complete)/target/generated-sources/antlr4/PeaceParser.cpp

#include "wci/intermediate/TypeSpec.h"
using namespace wci::intermediate;


// Generated from Peace.g4 by ANTLR 4.7.2


#include "PeaceVisitor.h"

#include "PeaceParser.h"


using namespace antlrcpp;
using namespace antlr4;

PeaceParser::PeaceParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

PeaceParser::~PeaceParser() {
  delete _interpreter;
}

std::string PeaceParser::getGrammarFileName() const {
  return "Peace.g4";
}

const std::vector<std::string>& PeaceParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& PeaceParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

PeaceParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PeaceParser::HeaderContext* PeaceParser::ProgramContext::header() {
  return getRuleContext<PeaceParser::HeaderContext>(0);
}

PeaceParser::MainBlockContext* PeaceParser::ProgramContext::mainBlock() {
  return getRuleContext<PeaceParser::MainBlockContext>(0);
}


size_t PeaceParser::ProgramContext::getRuleIndex() const {
  return PeaceParser::RuleProgram;
}


antlrcpp::Any PeaceParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PeaceVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

PeaceParser::ProgramContext* PeaceParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, PeaceParser::RuleProgram);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(86);
    header();
    setState(87);
    mainBlock();
    setState(88);
    match(PeaceParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- HeaderContext ------------------------------------------------------------------

PeaceParser::HeaderContext::HeaderContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PeaceParser::HeaderContext::PROG() {
  return getToken(PeaceParser::PROG, 0);
}

tree::TerminalNode* PeaceParser::HeaderContext::IDENTIFIER() {
  return getToken(PeaceParser::IDENTIFIER, 0);
}


size_t PeaceParser::HeaderContext::getRuleIndex() const {
  return PeaceParser::RuleHeader;
}


antlrcpp::Any PeaceParser::HeaderContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PeaceVisitor*>(visitor))
    return parserVisitor->visitHeader(this);
  else
    return visitor->visitChildren(this);
}

PeaceParser::HeaderContext* PeaceParser::header() {
  HeaderContext *_localctx = _tracker.createInstance<HeaderContext>(_ctx, getState());
  enterRule(_localctx, 2, PeaceParser::RuleHeader);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(90);
    match(PeaceParser::PROG);
    setState(91);
    match(PeaceParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MainBlockContext ------------------------------------------------------------------

PeaceParser::MainBlockContext::MainBlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PeaceParser::BlockContext* PeaceParser::MainBlockContext::block() {
  return getRuleContext<PeaceParser::BlockContext>(0);
}


size_t PeaceParser::MainBlockContext::getRuleIndex() const {
  return PeaceParser::RuleMainBlock;
}


antlrcpp::Any PeaceParser::MainBlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PeaceVisitor*>(visitor))
    return parserVisitor->visitMainBlock(this);
  else
    return visitor->visitChildren(this);
}

PeaceParser::MainBlockContext* PeaceParser::mainBlock() {
  MainBlockContext *_localctx = _tracker.createInstance<MainBlockContext>(_ctx, getState());
  enterRule(_localctx, 4, PeaceParser::RuleMainBlock);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(93);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

PeaceParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PeaceParser::DeclarationsContext* PeaceParser::BlockContext::declarations() {
  return getRuleContext<PeaceParser::DeclarationsContext>(0);
}

PeaceParser::MainContext* PeaceParser::BlockContext::main() {
  return getRuleContext<PeaceParser::MainContext>(0);
}

PeaceParser::DefinitionsContext* PeaceParser::BlockContext::definitions() {
  return getRuleContext<PeaceParser::DefinitionsContext>(0);
}


size_t PeaceParser::BlockContext::getRuleIndex() const {
  return PeaceParser::RuleBlock;
}


antlrcpp::Any PeaceParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PeaceVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

PeaceParser::BlockContext* PeaceParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 6, PeaceParser::RuleBlock);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(95);
    declarations();
    setState(97);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == PeaceParser::VOID

    || _la == PeaceParser::IDENTIFIER) {
      setState(96);
      definitions();
    }
    setState(99);
    main();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MainContext ------------------------------------------------------------------

PeaceParser::MainContext::MainContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PeaceParser::MainContext::MAIN() {
  return getToken(PeaceParser::MAIN, 0);
}

PeaceParser::MainBodyContext* PeaceParser::MainContext::mainBody() {
  return getRuleContext<PeaceParser::MainBodyContext>(0);
}


size_t PeaceParser::MainContext::getRuleIndex() const {
  return PeaceParser::RuleMain;
}


antlrcpp::Any PeaceParser::MainContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PeaceVisitor*>(visitor))
    return parserVisitor->visitMain(this);
  else
    return visitor->visitChildren(this);
}

PeaceParser::MainContext* PeaceParser::main() {
  MainContext *_localctx = _tracker.createInstance<MainContext>(_ctx, getState());
  enterRule(_localctx, 8, PeaceParser::RuleMain);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(101);
    match(PeaceParser::MAIN);
    setState(102);
    mainBody();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MainBodyContext ------------------------------------------------------------------

PeaceParser::MainBodyContext::MainBodyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PeaceParser::StmtListContext* PeaceParser::MainBodyContext::stmtList() {
  return getRuleContext<PeaceParser::StmtListContext>(0);
}

PeaceParser::FuncDeclarationsContext* PeaceParser::MainBodyContext::funcDeclarations() {
  return getRuleContext<PeaceParser::FuncDeclarationsContext>(0);
}


size_t PeaceParser::MainBodyContext::getRuleIndex() const {
  return PeaceParser::RuleMainBody;
}


antlrcpp::Any PeaceParser::MainBodyContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PeaceVisitor*>(visitor))
    return parserVisitor->visitMainBody(this);
  else
    return visitor->visitChildren(this);
}

PeaceParser::MainBodyContext* PeaceParser::mainBody() {
  MainBodyContext *_localctx = _tracker.createInstance<MainBodyContext>(_ctx, getState());
  enterRule(_localctx, 10, PeaceParser::RuleMainBody);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(104);
    match(PeaceParser::T__1);
    setState(106);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      setState(105);
      funcDeclarations();
      break;
    }

    }
    setState(108);
    stmtList();
    setState(109);
    match(PeaceParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationsContext ------------------------------------------------------------------

PeaceParser::DeclarationsContext::DeclarationsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PeaceParser::DeclListContext* PeaceParser::DeclarationsContext::declList() {
  return getRuleContext<PeaceParser::DeclListContext>(0);
}


size_t PeaceParser::DeclarationsContext::getRuleIndex() const {
  return PeaceParser::RuleDeclarations;
}


antlrcpp::Any PeaceParser::DeclarationsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PeaceVisitor*>(visitor))
    return parserVisitor->visitDeclarations(this);
  else
    return visitor->visitChildren(this);
}

PeaceParser::DeclarationsContext* PeaceParser::declarations() {
  DeclarationsContext *_localctx = _tracker.createInstance<DeclarationsContext>(_ctx, getState());
  enterRule(_localctx, 12, PeaceParser::RuleDeclarations);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(111);
    declList();
    setState(112);
    match(PeaceParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclListContext ------------------------------------------------------------------

PeaceParser::DeclListContext::DeclListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<PeaceParser::DeclContext *> PeaceParser::DeclListContext::decl() {
  return getRuleContexts<PeaceParser::DeclContext>();
}

PeaceParser::DeclContext* PeaceParser::DeclListContext::decl(size_t i) {
  return getRuleContext<PeaceParser::DeclContext>(i);
}


size_t PeaceParser::DeclListContext::getRuleIndex() const {
  return PeaceParser::RuleDeclList;
}


antlrcpp::Any PeaceParser::DeclListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PeaceVisitor*>(visitor))
    return parserVisitor->visitDeclList(this);
  else
    return visitor->visitChildren(this);
}

PeaceParser::DeclListContext* PeaceParser::declList() {
  DeclListContext *_localctx = _tracker.createInstance<DeclListContext>(_ctx, getState());
  enterRule(_localctx, 14, PeaceParser::RuleDeclList);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(114);
    decl();
    setState(119);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(115);
        match(PeaceParser::T__3);
        setState(116);
        decl(); 
      }
      setState(121);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclContext ------------------------------------------------------------------

PeaceParser::DeclContext::DeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PeaceParser::TypeIdContext* PeaceParser::DeclContext::typeId() {
  return getRuleContext<PeaceParser::TypeIdContext>(0);
}

tree::TerminalNode* PeaceParser::DeclContext::SUB_OP() {
  return getToken(PeaceParser::SUB_OP, 0);
}

PeaceParser::VarListContext* PeaceParser::DeclContext::varList() {
  return getRuleContext<PeaceParser::VarListContext>(0);
}


size_t PeaceParser::DeclContext::getRuleIndex() const {
  return PeaceParser::RuleDecl;
}


antlrcpp::Any PeaceParser::DeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PeaceVisitor*>(visitor))
    return parserVisitor->visitDecl(this);
  else
    return visitor->visitChildren(this);
}

PeaceParser::DeclContext* PeaceParser::decl() {
  DeclContext *_localctx = _tracker.createInstance<DeclContext>(_ctx, getState());
  enterRule(_localctx, 16, PeaceParser::RuleDecl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(122);
    typeId();
    setState(123);
    match(PeaceParser::SUB_OP);
    setState(124);
    varList();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarListContext ------------------------------------------------------------------

PeaceParser::VarListContext::VarListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<PeaceParser::VarIdContext *> PeaceParser::VarListContext::varId() {
  return getRuleContexts<PeaceParser::VarIdContext>();
}

PeaceParser::VarIdContext* PeaceParser::VarListContext::varId(size_t i) {
  return getRuleContext<PeaceParser::VarIdContext>(i);
}


size_t PeaceParser::VarListContext::getRuleIndex() const {
  return PeaceParser::RuleVarList;
}


antlrcpp::Any PeaceParser::VarListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PeaceVisitor*>(visitor))
    return parserVisitor->visitVarList(this);
  else
    return visitor->visitChildren(this);
}

PeaceParser::VarListContext* PeaceParser::varList() {
  VarListContext *_localctx = _tracker.createInstance<VarListContext>(_ctx, getState());
  enterRule(_localctx, 18, PeaceParser::RuleVarList);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(126);
    varId();
    setState(131);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == PeaceParser::T__4) {
      setState(127);
      match(PeaceParser::T__4);
      setState(128);
      varId();
      setState(133);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarIdContext ------------------------------------------------------------------

PeaceParser::VarIdContext::VarIdContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PeaceParser::VarIdContext::IDENTIFIER() {
  return getToken(PeaceParser::IDENTIFIER, 0);
}


size_t PeaceParser::VarIdContext::getRuleIndex() const {
  return PeaceParser::RuleVarId;
}


antlrcpp::Any PeaceParser::VarIdContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PeaceVisitor*>(visitor))
    return parserVisitor->visitVarId(this);
  else
    return visitor->visitChildren(this);
}

PeaceParser::VarIdContext* PeaceParser::varId() {
  VarIdContext *_localctx = _tracker.createInstance<VarIdContext>(_ctx, getState());
  enterRule(_localctx, 20, PeaceParser::RuleVarId);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(134);
    match(PeaceParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeIdContext ------------------------------------------------------------------

PeaceParser::TypeIdContext::TypeIdContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PeaceParser::TypeIdContext::IDENTIFIER() {
  return getToken(PeaceParser::IDENTIFIER, 0);
}


size_t PeaceParser::TypeIdContext::getRuleIndex() const {
  return PeaceParser::RuleTypeId;
}


antlrcpp::Any PeaceParser::TypeIdContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PeaceVisitor*>(visitor))
    return parserVisitor->visitTypeId(this);
  else
    return visitor->visitChildren(this);
}

PeaceParser::TypeIdContext* PeaceParser::typeId() {
  TypeIdContext *_localctx = _tracker.createInstance<TypeIdContext>(_ctx, getState());
  enterRule(_localctx, 22, PeaceParser::RuleTypeId);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(136);
    match(PeaceParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DefinitionsContext ------------------------------------------------------------------

PeaceParser::DefinitionsContext::DefinitionsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PeaceParser::DefinitionsListContext* PeaceParser::DefinitionsContext::definitionsList() {
  return getRuleContext<PeaceParser::DefinitionsListContext>(0);
}


size_t PeaceParser::DefinitionsContext::getRuleIndex() const {
  return PeaceParser::RuleDefinitions;
}


antlrcpp::Any PeaceParser::DefinitionsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PeaceVisitor*>(visitor))
    return parserVisitor->visitDefinitions(this);
  else
    return visitor->visitChildren(this);
}

PeaceParser::DefinitionsContext* PeaceParser::definitions() {
  DefinitionsContext *_localctx = _tracker.createInstance<DefinitionsContext>(_ctx, getState());
  enterRule(_localctx, 24, PeaceParser::RuleDefinitions);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(138);
    definitionsList();
    setState(139);
    match(PeaceParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DefinitionsListContext ------------------------------------------------------------------

PeaceParser::DefinitionsListContext::DefinitionsListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<PeaceParser::DefContext *> PeaceParser::DefinitionsListContext::def() {
  return getRuleContexts<PeaceParser::DefContext>();
}

PeaceParser::DefContext* PeaceParser::DefinitionsListContext::def(size_t i) {
  return getRuleContext<PeaceParser::DefContext>(i);
}


size_t PeaceParser::DefinitionsListContext::getRuleIndex() const {
  return PeaceParser::RuleDefinitionsList;
}


antlrcpp::Any PeaceParser::DefinitionsListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PeaceVisitor*>(visitor))
    return parserVisitor->visitDefinitionsList(this);
  else
    return visitor->visitChildren(this);
}

PeaceParser::DefinitionsListContext* PeaceParser::definitionsList() {
  DefinitionsListContext *_localctx = _tracker.createInstance<DefinitionsListContext>(_ctx, getState());
  enterRule(_localctx, 26, PeaceParser::RuleDefinitionsList);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(141);
    def();
    setState(146);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(142);
        match(PeaceParser::T__3);
        setState(143);
        def(); 
      }
      setState(148);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DefContext ------------------------------------------------------------------

PeaceParser::DefContext::DefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PeaceParser::ProcContext* PeaceParser::DefContext::proc() {
  return getRuleContext<PeaceParser::ProcContext>(0);
}

PeaceParser::FuncContext* PeaceParser::DefContext::func() {
  return getRuleContext<PeaceParser::FuncContext>(0);
}


size_t PeaceParser::DefContext::getRuleIndex() const {
  return PeaceParser::RuleDef;
}


antlrcpp::Any PeaceParser::DefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PeaceVisitor*>(visitor))
    return parserVisitor->visitDef(this);
  else
    return visitor->visitChildren(this);
}

PeaceParser::DefContext* PeaceParser::def() {
  DefContext *_localctx = _tracker.createInstance<DefContext>(_ctx, getState());
  enterRule(_localctx, 28, PeaceParser::RuleDef);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(151);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case PeaceParser::VOID: {
        setState(149);
        proc();
        break;
      }

      case PeaceParser::IDENTIFIER: {
        setState(150);
        func();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProcContext ------------------------------------------------------------------

PeaceParser::ProcContext::ProcContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PeaceParser::ProcContext::VOID() {
  return getToken(PeaceParser::VOID, 0);
}

tree::TerminalNode* PeaceParser::ProcContext::IDENTIFIER() {
  return getToken(PeaceParser::IDENTIFIER, 0);
}

PeaceParser::ParameterListContext* PeaceParser::ProcContext::parameterList() {
  return getRuleContext<PeaceParser::ParameterListContext>(0);
}

PeaceParser::ProcBodyContext* PeaceParser::ProcContext::procBody() {
  return getRuleContext<PeaceParser::ProcBodyContext>(0);
}


size_t PeaceParser::ProcContext::getRuleIndex() const {
  return PeaceParser::RuleProc;
}


antlrcpp::Any PeaceParser::ProcContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PeaceVisitor*>(visitor))
    return parserVisitor->visitProc(this);
  else
    return visitor->visitChildren(this);
}

PeaceParser::ProcContext* PeaceParser::proc() {
  ProcContext *_localctx = _tracker.createInstance<ProcContext>(_ctx, getState());
  enterRule(_localctx, 30, PeaceParser::RuleProc);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(153);
    match(PeaceParser::VOID);
    setState(154);
    match(PeaceParser::IDENTIFIER);
    setState(155);
    match(PeaceParser::T__5);
    setState(156);
    parameterList();
    setState(157);
    match(PeaceParser::T__6);
    setState(158);
    procBody();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProcBodyContext ------------------------------------------------------------------

PeaceParser::ProcBodyContext::ProcBodyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PeaceParser::StmtListContext* PeaceParser::ProcBodyContext::stmtList() {
  return getRuleContext<PeaceParser::StmtListContext>(0);
}

PeaceParser::FuncDeclarationsContext* PeaceParser::ProcBodyContext::funcDeclarations() {
  return getRuleContext<PeaceParser::FuncDeclarationsContext>(0);
}


size_t PeaceParser::ProcBodyContext::getRuleIndex() const {
  return PeaceParser::RuleProcBody;
}


antlrcpp::Any PeaceParser::ProcBodyContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PeaceVisitor*>(visitor))
    return parserVisitor->visitProcBody(this);
  else
    return visitor->visitChildren(this);
}

PeaceParser::ProcBodyContext* PeaceParser::procBody() {
  ProcBodyContext *_localctx = _tracker.createInstance<ProcBodyContext>(_ctx, getState());
  enterRule(_localctx, 32, PeaceParser::RuleProcBody);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(160);
    match(PeaceParser::T__1);
    setState(162);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      setState(161);
      funcDeclarations();
      break;
    }

    }
    setState(164);
    stmtList();
    setState(165);
    match(PeaceParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncContext ------------------------------------------------------------------

PeaceParser::FuncContext::FuncContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PeaceParser::TypeIdContext* PeaceParser::FuncContext::typeId() {
  return getRuleContext<PeaceParser::TypeIdContext>(0);
}
